--- a/package.json
+++ b/package.json
@@ -55,5 +55,13 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Desimor/webpack-react-redux.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Desimor/webpack-react-redux/issues"
+  },
+  "homepage": "https://github.com/Desimor/webpack-react-redux#readme"
 }
