--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "file-loader": "^0.9.0",
     "react": "^15.0.2",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
