--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "author": "Jean-Pierre Sierens",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^1.1.1",
     "file-loader": "^0.9.0",
-    "react": "^15.0.2",
-    "react-d3-basic": "^1.6.11",
-    "react-dom": "^15.0.2",
+    "react": "^15.5.4",
+    "react-chartjs": "^0.8.0",
+    "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
